# native

./: .gitignore  .gitmodules  LICENSE  README.md  Win32.sln  build.gradle  settings.gradle
enc_temp_folder/cc5d4ced20bae6947cde3cbc19cb93/: canvas.cpp
enc_temp_folder/d7ede3fd7acc776ec7a194897f492e1/: main.cpp
include/: core.h  data.h  io.h  native.h  test.h  ui.h
samples/components/: AndroidManifest.xml  build.gradle  components.vcxproj
samples/components/src/: main.cpp
samples/components/src/android/: CMakeLists.txt
samples/console/: console.vcxproj  main.cpp
samples/drawing/: AndroidManifest.xml  build.gradle  drawing.vcxproj
samples/drawing/src/: main.cpp
samples/helloworld/: AndroidManifest.xml  build.gradle  helloworld.vcxproj
samples/helloworld/src/: main.cpp
samples/layout/: AndroidManifest.xml  build.gradle  layout.vcxproj
samples/layout/src/: main.cpp
samples/notepad/: AndroidManifest.xml  build.gradle  notepad.vcxproj
samples/notepad/src/: main.cpp
samples/todo/: AndroidManifest.xml  build.gradle  todo.vcxproj  todo.vcxproj.filters
samples/todo/src/: todo.cpp
samples/webview/: AndroidManifest.xml  build.gradle  webview.vcxproj
samples/webview/src/: main.cpp
src/core/: build.gradle  core.vcxproj  core.vcxproj.filters
src/core/android/: AndroidManifest.xml  CMakeLists.txt  atomic.cpp  datetime.cpp  mutex.cpp  semaphore.cpp  system.cpp  thread.cpp
src/core/common/: array.cpp  asciicodec.cpp  clock.cpp  conditionvariable.cpp  convert.cpp  hash.cpp  latin1codec.cpp  math.cpp  memory.cpp  singleton.cpp  spinlock.cpp  string.cpp  stringcodec.cpp  threadpool.cpp  utf8codec.cpp  variant.cpp
src/core/include/: array.h  asciicodec.h  atomic.h  clock.h  collection.h  conditionvariable.h  convert.h  core.h  datetime.h  exception.h  flags.h  function.h  hash.h  ilockable.h  iterator.h  latin1codec.h  linkedlist.h  list.h  lockscope.h  map.h  math.h  memory.h  mutex.h  platform.h  queue.h  semaphore.h  set.h  shared.h  signal.h  singleton.h  spinlock.h  stack.h  string.h  stringcodec.h  system.h  task.h  thread.h  threadpool.h  types.h  utf8codec.h  (+1 more)
src/core/win32/: atomic.cpp  datetime.cpp  mutex.cpp  semaphore.cpp  system.cpp  thread.cpp
src/data/: build.gradle  data.vcxproj  data.vcxproj.filters
src/data/android/: AndroidManifest.xml  CMakeLists.txt
src/io/: build.gradle  io.vcxproj  io.vcxproj.filters
src/io/android/: AndroidManifest.xml  CMakeLists.txt  file.cpp
src/io/common/: console.cpp  file.cpp  memorystream.cpp  networkaddress.cpp  socket.cpp  tcpsocket.cpp  textstream.cpp  udpsocket.cpp
src/io/include/: console.h  file.h  (+7 more)
src/ui/: build.gradle  ui.vcxproj  ui.vcxproj.filters
tests/test/: build.gradle  test.vcxproj  test.vcxproj.filters
tests/unittests/: AndroidManifest.xml  build.gradle  unittests.vcxproj  unittests.vcxproj.filters
tests/unittests/src/android/: CMakeLists.txt
tests/unittests/src/android/res/values/: strings.xml
(+214 files in other folders)
