CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

GET_FILENAME_COMPONENT(root_dir "../../../.." ABSOLUTE)

INCLUDE_DIRECTORIES("${root_dir}/include")
LINK_DIRECTORIES("${root_dir}/lib/${ANDROID_ABI}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DANDROID_STL=c++_static -std=gnu++11 -fexceptions")

FILE(GLOB sources ../*.cpp ../common/*.cpp ../android/*.cpp)

ADD_LIBRARY(ui STATIC IMPORTED)
ADD_LIBRARY(core STATIC IMPORTED)
ADD_LIBRARY(data STATIC IMPORTED)
ADD_LIBRARY(io STATIC IMPORTED)
ADD_LIBRARY(jnipp STATIC IMPORTED)
ADD_LIBRARY(testing STATIC IMPORTED)

ADD_LIBRARY(notepad SHARED ${sources})

SET_TARGET_PROPERTIES(ui PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libui.so")
SET_TARGET_PROPERTIES(core PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libcore.so")
SET_TARGET_PROPERTIES(data PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libdata.so")
SET_TARGET_PROPERTIES(io PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libio.so")
SET_TARGET_PROPERTIES(jnipp PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libjnipp.so")
SET_TARGET_PROPERTIES(testing PROPERTIES IMPORTED_LOCATION "${root_dir}/lib/${ANDROID_ABI}/libtesting.so")

TARGET_LINK_LIBRARIES(notepad ui core data io jnipp testing)
